--- a/switchable-block.html
+++ b/switchable-block.html
@@ -16,5 +16,10 @@
 <script>
   Polymer({
     is: "switchable-block",
+    properties:{
+      open:{
+        notify:true,
+      },
+    },
   })
 </script>
